# semio_deixis_ros

./: CMakeLists.txt  Readme.md  mainpage.dox  package.xml
nodes/: CMakeLists.txt  example_deictic_targets_node.cpp  semio_deixis_node.cpp
